# CarWashSimulator

./: CMakeLists.txt  README.txt  constants.h  ipc_utils.c  ipc_utils.h  logging.c  logging.h  main.c  signal_handler.c  signal_handler.h  simulation_logic.c  simulation_logic.h  structures.h  utils.c  utils.h  wash
